--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 rand = "0.8.5" #formatted as dependency name and version number
 json = "0.12.4"
 regex = "1.10.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
